# TheSpreadGame

./: .gitignore  LICENSE  README.md  async_api.yaml  package-lock.json
backend/: CMakeLists.txt  conanfile.py
backend/include/: errors.hpp  game.hpp  game_coordinator.hpp  lobby_manager.hpp  match.hpp  models.hpp  server.hpp  session.hpp
backend/lib/: CMakeLists.txt
backend/lib/include/: field.hpp  game.hpp
backend/lib/src/: field.cpp  game.cpp
backend/playground/: CMakeLists.txt  main.cpp
backend/src/: game_coordinator.cpp  lobby_manager.cpp  main.cpp  models.cpp  server.cpp  session.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: GameBoard.svelte  LobbyList.svelte  LobbyView.svelte  PlayerPanel.svelte  Toast.svelte
frontend/src/lib/: toast.js
frontend/src/stores/: WebSocketStore.js  gameStore.js
